Fix search transparent background on mobile when toggled open

--- a/assets/scss/2-modules/_global-nav.scss
+++ b/assets/scss/2-modules/_global-nav.scss
@@ -120,3 +120,13 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.global-nav__search--open-background {
+  width: 120%;
+  background-color: #c61f48;
+  height: 65px;
+  position: absolute;
+  z-index: -1;
+  top: -80px;
+  left: -40px;
+}
